--- a/HospitalSystem/HospitalSystem/systemapp/templates/index.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/index.html
@@ -1,7 +1,3 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 <!DOCTYPE html>
 <html >
   <head>
@@ -12,7 +8,7 @@
     <title>Healing pawls Hospital</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
 
 
       <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
@@ -21,11 +17,11 @@
   </head>
   <body>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <script src="/path/to/jquery.min.js"></script>
-    <script src="/path/to/bootstrap.min.js"></script>
-    <script src="/path/to/bootstrap-hover-dropdown.min.js"></script>
+    <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='bootstrap/js//bootstrap-hover-dropdown.min.js') }}"></script>
 
     <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -66,7 +62,7 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#" data-hover="dropdown"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+        <li><a href="{{ url_for('signup')}}"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
       </ul>
     </div>
   </div>
@@ -114,7 +110,8 @@ It is our responsibility to ensure your pet's health!</p>
   </div>
 </div>
 
-
+{% block content %}
+{% endblock %}
 
   </body>
 </html>
