--- a/HospitalSystem/HospitalSystem/systemapp/templates/nav.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/nav.html
@@ -65,7 +65,7 @@
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" data-hover="dropdown"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+            <li><a href="{{ url_for('customer_login')}}" data-hover="dropdown"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
             <li><a href="{{ url_for('signup')}}"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
         </ul>
         </div>
