--- a/HospitalSystem/HospitalSystem/systemapp/templates/after_login_page.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/after_login_page.html
@@ -1,3 +1,3 @@
 <html>
     <h1>This page is for testing redirection after user sign up</h1>
-</html>
+</html>https://github.com/COMP3030J2020-Group2/The-First-Beta-System-for-Healing-Paws-Veterinary-Hospital.git
