--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_base.html
@@ -1,10 +1,182 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Welcome to Healing Paws Veterinary Hospital</title>
-</head>
-<body>
 
-</body>
+<!--Notice:-->
+<!--The Bootstrap kit for this page is Version 4.1.3, different from the original one (version 3).-->
+<!--So I put it in '../static/vendor'.-->
+<!--The issue of different Bootstrap version is PENDING.-->
+
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Customer</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="robots" content="all,follow">
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="../static/vendor/bootstrap/css/bootstrap.min.css">
+    <!-- Font Awesome CSS-->
+    <link rel="stylesheet" href="../static/vendor/font-awesome/css/font-awesome.min.css">
+    <!-- Fontastic Custom icon font-->
+    <link rel="stylesheet" href="../static/css/fontastic.css">
+    <!-- Google fonts - Poppins -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,700">
+    <!-- theme stylesheet-->
+    <link rel="stylesheet" href="../static/css/style.pink.css" id="theme-stylesheet">
+    <!-- Custom stylesheet - for your changes-->
+    <link rel="stylesheet" href="../static/css/custom.css">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="../static/images/customer_page_img/favicon.ico">
+    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+  </head>
+
+  <body>
+    <div class="page">
+
+      <!-- Main Navbar-->
+      <header class="header">
+        <nav class="navbar">
+          <!-- Search Box-->
+<!--          <div class="search-box">-->
+<!--            <button class="dismiss"><i class="icon-close"></i></button>-->
+<!--            <form id="searchForm" action="#" role="search">-->
+<!--              <input type="search" placeholder="What are you looking for..." class="form-control">-->
+<!--            </form>-->
+<!--          </div>-->
+          <div class="container-fluid">
+            <div class="navbar-holder d-flex align-items-center justify-content-between">
+
+              <!-- Navbar Header-->
+<!--                background color for this bar - search 'nav.navbar' in CSS ;)-->
+              <div class="navbar-header">
+                <!-- Navbar Brand -->
+                <a href="{{ url_for('index')}}" class="navbar-brand d-none d-sm-inline-block">
+                  <div class="brand-text d-none d-lg-inline-block"><strong>Healing Paws</strong> Veterinary Hospital<span></span></div>
+                  <div class="brand-text d-none d-sm-inline-block d-lg-none"><strong>Healing Paws</strong></div>
+                </a>
+                <!-- Toggle Button '<='-->
+                <a id="toggle-btn" href="#" class="menu-btn active"><span></span><span></span><span></span>
+                </a>
+              </div>
+
+              <!-- Navbar Menu -->
+              <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
+                <!-- Search pending-->
+                <!-- Notifications pending-->
+                <!-- Messages pending-->
+                <!-- Languages dropdown    -->
+                <li class="nav-item dropdown"><a id="languages" rel="nofollow" data-target="#" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link language dropdown-toggle">
+                  <img src="../static/images/customer_page_img/flags/16/IE.png" alt="English"><span class="d-none d-sm-inline-block">English</span></a>
+                  <ul aria-labelledby="languages" class="dropdown-menu">
+                    <li><a rel="nofollow" href="#" class="dropdown-item"> <img src="../static/images/customer_page_img/flags/16/CN.png" alt="English" class="mr-2">Chinese</a></li>
+                  </ul>
+                </li>
+                <!-- Logout    -->
+                <li class="nav-item"><a href="{{url_for('customer_logout')}}" class="nav-link logout"> <span class="d-none d-sm-inline">Logout</span><i class="fa fa-sign-out"></i></a></li>
+              </ul>
+
+            </div>
+          </div>
+
+        </nav>
+      </header>
+
+      <div class="page-content d-flex align-items-stretch">
+        <!-- Side Navbar -->
+        <nav class="side-navbar">
+          <!-- Sidebar Header-->
+          <div class="sidebar-header d-flex align-items-center">
+            <div class="avatar"><img src="../static/images/customer_page_img/customer_profile_photo.jpg" alt="..." class="img-fluid rounded-circle"></div>
+            <div class="title">
+              <h1 class="h4">{{user.username}}</h1>
+<!--              <p>(customer other information)</p>-->
+            </div>
+          </div>
+          <!-- Sidebar Navidation Menus-->
+          <hr class="heading">
+<!--          <span class="heading">Main</span>-->
+            <ul class="list-unstyled">
+                <li class="active">
+                  <a href="{{url_for('customer_main')}}">
+<!--                           <i class="icon-home"></i>-->
+                    Main</a>
+                </li>
+            </ul>
+
+            <span class="heading">Me</span>
+          <ul class="list-unstyled">
+            <li>
+              <a href="{{url_for('customer_appointments')}}">
+<!--                        <i class="icon-grid"></i>-->
+                My Appointments</a>
+            </li>
+            <li>
+              <a href="#">
+<!--                        <i class="fa fa-bar-chart"></i>-->
+                My Pets</a>
+            </li>
+<!--              Example dropdown-->
+<!--            <li>-->
+<!--              <a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse">-->
+<!--&lt;!&ndash;                <i class="icon-interface-windows"></i>&ndash;&gt;-->
+<!--                Example dropdown</a>-->
+<!--              <ul id="exampledropdownDropdown" class="collapse list-unstyled ">-->
+<!--                <li><a href="#">Page</a></li>-->
+<!--                <li><a href="#">Page</a></li>-->
+<!--                <li><a href="#">Page</a></li>-->
+<!--              </ul>-->
+<!--            </li>-->
+          </ul>
+
+          <span class="heading">Setting</span>
+          <ul class="list-unstyled">
+            <li> <a href="#">
+<!--                <i class="icon-flask"></i>-->
+                Profile</a>
+            </li>
+            <li> <a href="#">
+<!--                <i class="icon-screen"></i>-->
+                About Us</a>
+            </li>
+          </ul>
+        </nav>
+
+        <!-- Main Content -->
+        <div class="content-inner">
+            {% block content %}
+            {% endblock %}
+          <!-- Page Footer-->
+          <footer class="main-footer">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-sm-6">
+                  <p>
+                      <strong>Healing Paws Veterinary Hospital</strong><br>
+                      Y<i>our one-call-away pet butler.</i><br><br>
+                      Tel: 010-1024111(Beijing)  021-1024222(Shanghai)
+                  </p>
+                </div>
+                <div class="col-sm-6 text-right">
+                  <p></p>
+                </div>
+              </div>
+            </div>
+          </footer>
+        </div>
+
+      </div>
+    </div>
+    <!-- JavaScript files-->
+    <script src="../static/vendor/jquery/jquery.min.js"></script>
+    <script src="../static/vendor/popper.js/umd/popper.min.js"> </script>
+    <script src="../static/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../static/vendor/jquery.cookie/jquery.cookie.js"> </script>
+    <script src="../static/vendor/chart.js/Chart.min.js"></script>
+    <script src="../static/vendor/jquery-validation/jquery.validate.min.js"></script>
+    <script src="../static/script/customer_page_js/charts-home.js"></script>
+    <!-- Main File-->
+    <script src="../static/script/customer_page_js/front.js"></script>
+  </body>
 </html>
