--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_login.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_login.html
@@ -1,6 +1,7 @@
 {% extends"nav.html" %}
 
 {% block content %}
+<div class="jumbotron">
     <div class="container">
         <div class="row row-centered">
             <div class="well col-md-6 col-centered">
@@ -35,13 +36,12 @@
                         <br>
                         {{ form.submit() }}
                     </div>
-
             </form>
 
             </div>
         </div>
     </div>
-
+ </div>
     <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static',filename='script/customer_login.js') }}"></script>
 {% endblock %}
