Completed customer display questions list and create new question

--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_base.html
@@ -117,6 +117,11 @@
 <!--                        <i class="fa fa-bar-chart"></i>-->
                 My Pets</a>
             </li>
+            <li>
+              <a href="{{url_for('customer_questions')}}">
+<!--                        <i class="fa fa-bar-chart"></i>-->
+                My Questions</a>
+            </li>
 <!--              Example dropdown-->
 <!--            <li>-->
 <!--              <a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse">-->
