Fix sidebar change color problem
add a script for these html templates

--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
@@ -2,4 +2,9 @@
 
 {% block content %}
 <p>edit & check appointments page in here</p>
+<script>
+      console.log('appointment');
+      document.getElementById("main").setAttribute("class", "");
+      document.getElementById("appointment").setAttribute("class", "active");
+</script>
 {% endblock %}
