--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_main.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_main.html
@@ -1224,4 +1224,10 @@
             </div>
           </section>
 
+<script>
+    console.log('main');
+    document.getElementById("appointment").setAttribute("class", "");
+    document.getElementById("main").setAttribute("class", "active");
+</script>
+
 {% endblock %}
