--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
@@ -1,10 +1,77 @@
 {% extends"customer_base.html" %}
-
 {% block content %}
-<p>edit & check appointments page in here</p>
-<script>
-      console.log('appointment');
-      document.getElementById("main").setAttribute("class", "");
-      document.getElementById("appointment").setAttribute("class", "active");
-</script>
+    <div class="container">
+        <div class="row row-centered">
+            <div class="well col-md-6 col-centered">
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>User</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th>Name:</th>
+                            <td>{{user.username}}</td>
+                        </tr>
+                        <tr>
+                            <th>Email:</th>
+                            <td>{{user.email}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row row-centered" >
+            <div class="well col-md-6 col-centered" >
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Appointments</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        <tr>
+                            <th>Pet Name</th>
+                            <th>Pet ID</th>
+                            <th>Appointment ID</th>
+                            <th>Appointments Type </th>
+                            <th>Appointments Time </th>
+                            <th>Appointments Description </th>
+                            <th>Operator ID </th>
+
+                        </tr>
+                        {% for a in appointments%}
+                        {% for pet in pets%}
+                        {%  if pet.id==a.pet_id %}
+                        <tr>
+                            <td>{{pet.name}}</td>
+                            <td>{{pet.id}}</td>
+                            <td>{{a.id}}</td>
+                            <td>{{a.type}}</td>
+                            <td>{{a.time}}</td>
+                            <td>{{a.description}}</td>
+                            <td>{{a.operator_id}}</td>
+                            <td><a class="btn btn-primary btn-sm" href="/customer_appointments/update_appointments/{{a.id}}" role="button">Edit</a>
+                                <a class="btn btn-primary btn-sm" href="/customer_appointments/delete_appointment/{{a.id}}" role="button">Delete</a></td>
+                            </td>
+
+                        </tr>
+                        {% endif %}
+                        {% endfor %}
+                        {% endfor %}
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 {% endblock %}
+
