--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_check_appointments.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_check_appointments.html
@@ -1,5 +1,16 @@
+<!DOCTYPE html>
+<html>
+    
+<head>
+    
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap2.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
+    <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+</head>
 
-<link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap2.min.css') }}">
+
+
 <body>
     <div class="card">
         <div class="card-header">
@@ -14,19 +25,87 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Column 1</th>
-                    <th></th>
+                    <th>No</th>
+                    <th>Appointment Type</th>
+                    <th>Construction Date</th>
+                    <th>Customer</th>
+                    <th>Pet Name</th>
+                    <th>Pet Type</th>
+                    <th>Description</th>
+                    <th>Operation</th>
                 </tr>
             </thead>
             <tbody>
+                {% for index,appoint in appoints %}
                 <tr>
-                    <td>{{ appointment }}</td>
-                    <td><button class="btn btn-primary" type="button">{{ button }}</button></td>
+                    <td>{{ index+1 }}</td>
+                    {% if appoint.type == 0 %}
+                    <td>Emergent</td>
+                    {% elif appoint.type == 1 %}
+                    <td>Regular</td>
+                    {% endif %}
+                    <td>{{ appoint.time }}</td>
+                    <td>{{ customers[index] }}</td>
+                    <td>{{ pets[index].name }}</td>
+                    {% if pets[index].type == 1 %}
+                    <td>Cat</td>
+                    {% elif pets[index].type == 2 %}
+                    <td>Dog</td>
+                    {% endif %}
+                    <!-- <td><button class="btn btn-link" type="button"  id="description" data-toggle="modal" data-target="#myModal">view</button></td> -->
+                    <td><button class="btn btn-link description" type="button" id="{{ appoint.id }}" value="{{ appoint.description }}" >view</button></td>
+                    <td><button class="{{ button_style }} operation" type="button" id="{{ appoint.id }}">{{ button }}</button></td>
                 </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
-    <div></div>
-    <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
-    <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
+    <div class="modal fade" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3>Description</h3>
+                </div>
+                <div class="modal-body">
+                    <p>Hello</p>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+
+        var operationButtons = document.querySelectorAll('.operation');
+        for(var i=0;i<operationButtons.length;i++){
+            operationButtons[i].addEventListener('click',operation);
+        }
+        function operation(e){
+            var buttonType = e.target.innerHTML;
+            var index = e.target.id
+            var form = document.createElement('form');
+            form.method = "post";
+            if(buttonType == "Finish"){
+                form.action = "/staff_check_appointments/on_going";
+            }else if(buttonType == "Check"){
+                form.action = "/staff_check_appointments/unchecked";
+            }else if(buttonType == "Active"){
+                form.action = "/staff_check_appointments/finished";
+            }
+            var idArea = document.createElement('input');
+            idArea.name = 'id';
+            idArea.value = index;
+            form.appendChild(idArea);
+            document.body.appendChild(form);
+            form.submit();
+        }
+
+        $(".description").click(function (e) {
+            $(".modal-body p").text(e.target.value);
+            $('#myModal').modal();
+        });
+    </script>
+
 </body>
+</html>
