Customer add appointment function

--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
@@ -73,5 +73,11 @@
             </div>
         </div>
     </div>
+
+<script>
+    document.getElementById("main").setAttribute("class", "");
+    document.getElementById("appointment").setAttribute("class", "active");
+</script>
+
 {% endblock %}
 
