--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_base.html
@@ -121,7 +121,7 @@
                 My Appointments</a>
             </li>
             <li>
-              <a>
+              <a href="{{url_for('pet_signup')}}">
 <!--                        <i class="fa fa-bar-chart"></i>-->
                 My Pets</a>
             </li>
