Update customer add appointment function

--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_main.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_main.html
@@ -15,14 +15,6 @@
                 <!-- Appointments Form-->
                 <div class="col-lg-4">
                   <div class="card">
-
-<!--                    <div class="card-close">-->
-<!--                      <div class="dropdown">-->
-<!--                        <button type="button" id="closeCard01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-ellipsis-v"></i></button>-->
-<!--                        <div aria-labelledby="closeCard4" class="dropdown-menu dropdown-menu-right has-shadow"><a href="#" class="dropdown-item remove"> <i class="fa fa-times"></i>Close</a><a href="#" class="dropdown-item edit"> <i class="fa fa-gear"></i>Edit</a></div>-->
-<!--                      </div>-->
-<!--                    </div>-->
-
                     <div class="card-header d-flex align-items-center">
                       <h3 class="h4">Make an Appointment</h3>
                     </div>
@@ -63,15 +55,6 @@
                                   </div>
                                </div>
                               </form>
-                                <script>
-                                    let submit_btn = document.getElementById('submit');
-                                    let pets_list = document.getElementById('pets');
-                                    submit_btn.onclick = function () {
-
-                                    }
-
-                                </script>
-
                             </div>
                           </div>
                         </div>
@@ -79,36 +62,34 @@
                     </div>
 
                     <div class="card-body text-center">
-                      <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-primary">Emergency Appointment</button>
+                      <button type="button" data-toggle="modal" data-target="#myModal0" class="btn btn-primary">Emergency  Appointment</button>
                       <!-- Modal-->
-                      <div id="myModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" class="modal fade text-left">
+                      <div id="myModal0" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" class="modal fade text-left">
                         <div role="document" class="modal-dialog">
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h4 id="exampleModalLabel1" class="modal-title">Emergency Appointment</h4>
+                              <h4 id="exampleModalLabel" class="modal-title">Emergency Appointment</h4>
                               <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
                             </div>
                             <div class="modal-body">
-                              <p>Add your appointment details here!</p>
-
-                              <form>
-                                <div class="form-group">
-                                  <label>Email</label>
-                                  <input type="email" placeholder="Email Address" class="form-control">
+                              <p>Just choose one pet!</p>
+                              <form action="" method="post" novalidate role="form" class="form-horizontal">
+                                {{ form0.hidden_tag() }}
+                                <div class="form-group row">
+                                    {{ form0.pets.label(class="col-sm-3 form-control-label") }}<br>
+                                    <div class="col-sm-9">
+                                        <label class="checkbox-inline" >
+                                            {{ form0.pets(class="form-control", id="pets") }}
+                                        </label>
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                  <label>Password</label>
-                                  <input type="password" placeholder="Password" class="form-control">
-                                </div>
-<!--                                <div class="form-group">-->
-<!--                                  <input type="submit" value="Signin" class="btn btn-primary">-->
-<!--                                </div>-->
+                                  <div class="modal-footer">
+                                    <button type="button" data-dismiss="modal" class="btn btn-secondary">Close</button>
+                                    {{ form0.submit(class="btn btn-primary", id="submit") }}
+                                  </div>
+                               </div>
                               </form>
-
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" data-dismiss="modal" class="btn btn-secondary">Close</button>
-                              <button type="button" class="btn btn-primary">Submit</button>
                             </div>
                           </div>
                         </div>
