--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
@@ -26,53 +26,61 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="row row-centered" >
-            <div class="well col-md-6 col-centered" >
+    <section class="tables">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Appointments</th>
+                                </tr>
+                            </thead>
+                            <tbody>
 
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Appointments</th>
-                        </tr>
-                    </thead>
-                    <tbody>
+                                <tr>
+                                    <th>Pet Name</th>
+                                    <th>Pet ID</th>
+                                    <th>Appointment ID</th>
+                                    <th>Appointments Type </th>
+                                    <th>Appointments Time </th>
+                                    <th>Appointments Description </th>
+                                    <th>Operator ID </th>
 
-                        <tr>
-                            <th>Pet Name</th>
-                            <th>Pet ID</th>
-                            <th>Appointment ID</th>
-                            <th>Appointments Type </th>
-                            <th>Appointments Time </th>
-                            <th>Appointments Description </th>
-                            <th>Operator ID </th>
+                                </tr>
+                                {% for a in appointments%}
+                                {% for pet in pets%}
+                                {%  if pet.id==a.pet_id %}
+                                <tr>
+                                    <td>{{pet.name}}</td>
+                                    <td>{{pet.id}}</td>
+                                    <td>{{a.id}}</td>
+                                    <td>{{a.type}}</td>
+                                    <td>{{a.time}}</td>
+                                    <td>{{a.description}}</td>
+                                    <td>{{a.operator_id}}</td>
+                                    <td><a class="btn btn-primary btn-sm" href="/customer_appointments/update_appointments/{{a.id}}" role="button">Edit</a>
+                                        <a class="btn btn-primary btn-sm" href="/customer_appointments/delete_appointment/{{a.id}}" role="button">Delete</a></td>
+                                    </td>
 
-                        </tr>
-                        {% for a in appointments%}
-                        {% for pet in pets%}
-                        {%  if pet.id==a.pet_id %}
-                        <tr>
-                            <td>{{pet.name}}</td>
-                            <td>{{pet.id}}</td>
-                            <td>{{a.id}}</td>
-                            <td>{{a.type}}</td>
-                            <td>{{a.time}}</td>
-                            <td>{{a.description}}</td>
-                            <td>{{a.operator_id}}</td>
-                            <td><a class="btn btn-primary btn-sm" href="/customer_appointments/update_appointments/{{a.id}}" role="button">Edit</a>
-                                <a class="btn btn-primary btn-sm" href="/customer_appointments/delete_appointment/{{a.id}}" role="button">Delete</a></td>
-                            </td>
+                                </tr>
+                                {% endif %}
+                                {% endfor %}
+                                {% endfor %}
 
-                        </tr>
-                        {% endif %}
-                        {% endfor %}
-                        {% endfor %}
-
-                    </tbody>
-                </table>
+                            </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-        </div>
-    </div>
+    </section>
+
 
 <script>
     document.getElementById("main").setAttribute("class", "");
