--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_base.html
@@ -13,8 +13,8 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
-
-
+      <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
+      <script type="text/javascript" src="{{ url_for('static',filename='script/staff_search.js') }}"></script>
       <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
     <![endif]-->
@@ -58,9 +58,9 @@
         </ul>
         <form class="navbar-form navbar-left">
             <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search with id or name">
+            <input type="text" class="form-control" placeholder="Search with id or name" id="search">
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default" id="searchsubmit">Submit</button>
         </form>
         </div>
         </div>
