implemented basic querying of pets, i.e. 'My Pets' for customer

--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_check_appointments.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_check_appointments.html
@@ -75,7 +75,7 @@
             </div>
         </div>
     </div>
-    <script>
+    <!-- <script>
 
         var operationButtons = document.querySelectorAll('.operation');
         for(var i=0;i<operationButtons.length;i++){
@@ -105,7 +105,7 @@
             $(".modal-body p").text(e.target.value);
             $('#myModal').modal();
         });
-    </script>
+    </script> -->
 
 </body>
 </html>
