check_appointment_modify

--- a/HospitalSystem/HospitalSystem/systemapp/templates/index.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/index.html
@@ -50,7 +50,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="{{ url_for('staff_login') }}">Staff Login</a></li>
           </ul>
         </li>
       </ul>
