--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_login.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_login.html
@@ -1,8 +1,9 @@
 {% extends "nav.html" %}
 
 {% block content %}
+    <div class="jumbotron">
     <div class="container">
-        <h1>
+        <h2>
             <form action="" method="post" id="staff_login_form" novalidate role="form" class="form-horizontal">
                 {{ form.hidden_tag() }}
                 <div class="input-group">
@@ -32,7 +33,8 @@
                 {{ form.submit() }}
             </div>
             </form>
-        </h1>
+        </h2>
+    </div>
     </div>
 
     <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
