check appointment modify

--- a/HospitalSystem/HospitalSystem/systemapp/templates/control_system.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/control_system.html
@@ -4,7 +4,7 @@
         <div class="container">
             <h1>Healing Pawls Hospital</h1>
             <p>Welcome, Staff {{ staff.name }}-[{{ staff.level }}], last login: {{ staff.last_login }}<br>
-                Put on a simle face to every customer!</p>
+                Put on a smile face to every customer!</p>
    </div>
 </div>
 {% endblock %}
