--- a/HospitalSystem/HospitalSystem/systemapp/templates/index.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Healing pawls Hospital</title>
+    <title>Healing paws Hospital</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
@@ -70,7 +70,7 @@
 
 <div class="jumbotron">
    <div class="container">
-  <h1>Healing Pawls Hospital!</h1>
+  <h1>Healing Paws Hospital</h1>
   <p>The hospital is committed to providing the best treatment for your pet.
 It is our responsibility to ensure your pet's health!</p>
   <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
@@ -80,31 +80,31 @@ It is our responsibility to ensure your pet's health!</p>
   <div class="row">
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="..." alt="...">
+      <img src="../static/images/1.png" alt="...">
       <div class="caption">
-        <h3>Picture 1</h3>
-        <p>hospital</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+
+        <p>Your pet will get the best care !</p>
+        <p><a href="#" class="btn btn-primary" role="button">Learn More</a> </p>
       </div>
     </div>
   </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="1.png" alt="...">
+      <img src="../static/images/2.png" alt="...">
       <div class="caption">
-        <h3>Picture 2</h3>
-        <p>pawl</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+
+        <p>Sign up for a discount !</p>
+        <p><a href="#" class="btn btn-primary" role="button">Learn More</a> </p>
       </div>
     </div>
   </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="..." alt="...">
+      <img src="../static/images/3.png" alt="...">
       <div class="caption">
-        <h3>Picture 3</h3>
-        <p>healing</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+
+        <p>The doctors have extensive medical experience !</p>
+        <p><a href="#" class="btn btn-primary" role="button">Learn More</a> </p>
       </div>
     </div>
   </div>
