staff check pets and edit pet
staff check pets and edit

--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_base.html
@@ -52,8 +52,10 @@
                 <li><a href="#">Check Appointment</a></li>
                 <li><a href="{{url_for('staff_questions')}}">Check Questions</a></li>
                 <li><a href="#">Add Appointment</a></li>
+                <li><a href="{{url_for('staff_checkpets')}}">Check Pets</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Advanced Operations</a></li>
+
             </ul>
             </li>
         </ul>
