Add logo to customer main page

--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_base.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_base.html
@@ -52,11 +52,9 @@
         <div class="nav-header">
             <div class="brand-logo">
                 <a href="{{ url_for('index') }}">
-                    <b class="logo-abbr"><img src="../static/images/customer_img/logo.png" alt=""> </b>
-                    <span class="logo-compact"><img src="../static/images/customer_img/logo-compact.png" alt=""></span>
-                    <span class="brand-title">
-                        <img src="../static/images/customer_img/logo-text.png" alt="">
-                    </span>
+                    <b class="logo-abbr"><img src="../static/images/customer_img/favicon1.png" alt=""> </b>
+                    <span class="logo-compact color-white"><strong>Healing Paws</strong> </span>
+                    <span class="brand-title  color-white"><strong> Healing Paws</strong> </span>
                 </a>
             </div>
         </div>
