--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_check_appointments.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_check_appointments.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<html>
-    
+{% extends "staff_base.html" %}
+
+{% block content %}
+
 <head>
-    
+
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap2.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
@@ -75,7 +76,7 @@
             </div>
         </div>
     </div>
-    <!-- <script>
+    <script>
 
         var operationButtons = document.querySelectorAll('.operation');
         for(var i=0;i<operationButtons.length;i++){
@@ -105,7 +106,8 @@
             $(".modal-body p").text(e.target.value);
             $('#myModal').modal();
         });
-    </script> -->
+    </script>
 
 </body>
-</html>
+
+{% endblock %}
