--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_operate_appointment.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_operate_appointment.html
@@ -1,13 +1,18 @@
-{% extends staff_base.html %}
+{% extends "staff_base.html" %}
 {% block content %}
-    <table>
+    <div class="table-responsive">
+    <table class="table">
     <tr>
         <th>Appointment ID</th>
         <td id="apm_id">{{ appointment.id }}</td>
     </tr>
     <tr>
         <th>Appointment type</th>
-        <td>{{ appointment.type }}</td>
+        {% if appointment.type == 0 %}
+        <td>Emergent</td>
+        {% elif appointment.type == 1 %}
+        <td>Regular</td>
+        {% endif %}
     </tr>
     <tr>
         <th>Appointment time</th>
@@ -46,6 +51,7 @@
     </table>
     <button id="ongoing">On Going</button>
     <button id="finish">Finish</button>
+    </div>
 
     <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static',filename='script/staff_operate_appointment.js') }}"></script>
